# BrightEyes

./: .gitignore  Dockerfile  Makefile  nvf2tga.c
.github/workflows/: ci.yml  docker-bcc-dosbox.yml  dos-ci.yml  macos-ci.yml  ubuntu-ci.yml  windows-ci.yml
docs/source/: conf.py  index.rst
drive_c/: README.md  bcc20.conf  bcc30.conf  bcc31.conf  compile.conf  dosbox.conf
include/: format.h  loader.h  packer.h  version.h
music/: README.md
music/1992-Die Schicksalsklinge/: README.md
music/1996-Das Schwarze Auge_ Schatten über Riva/: README.md
music/1996-Das Schwarze Auge_ Sternenschweif/: README.md
music/1997-Das Schwarze Auge 2_ Sternenschweif/: README.md
src/: ace2tga.c  aif2tga.c  dump_tga.c  loader_ace.c  loader_aif.c  loader_nvf.c  nvf2tga.c  pp20.c  rl.c  rle.c
src/gen_dos/: GEN104DE.RES  GEN105DE.RES  GEN300EN.RES  README.md  bnt.sh  build.bat  cda_code.c  cda_code.h  cda_data.asm  cda_data.h  compile.bat  ds_check.cpp  gen.h  gen104de.c  gen105de.c  gen300en.c  hero.h  powerp20.asm  random.c  sndlib.asm  sndlib.h  symbols.h  vgalib.asm  vgalib.h
src/gen_dos/orig/: .gitignore
src/gen_dos/tools/: bc.sh  bnt104de.sh  bnt105de.sh  bnt300en.sh  build.sh
src/schick/: .gitignore  CMakeLists.txt  Doxyfile  Makefile_old  TLINK.RES  alchemy_cure.cpp  alchemy_cure.h  area_camp.cpp  automap.cpp  cdrom.cpp  cdrom.h  city_events.cpp  city_events.h  common.h  compile.bat  consume.cpp  datseg.cpp  datseg.h  diary.cpp  disease_effect.cpp  dummy_location.h  dungeon_cave2.cpp  dungeon_cave4.cpp  dungeon_cave4.h  dungeon_common1.cpp  dungeon_common2.cpp  dungeon_common2.h  dungeon_inn.cpp  dungeon_mageruin.cpp  dungeon_mageruin.h  dungeon_main.cpp  dungeon_oberorken_mine.cpp  dungeon_orc_lair.cpp  dungeon_pirate_cave.cpp  dungeon_pirate_cave.h  dungeon_prem_mine.cpp  dungeon_ruined_castle.cpp  dungeon_ship_death.cpp  dungeon_spider_cave.cpp  dungeon_spider_cave.h  (+326 more)
src/schick/doc/: .gitignore  details.html
src/schick/tools/: README.md  bc.sh  bnt302de.sh  build.sh  compile.sh  disassemble.sh
src/schick_dos/: TLINK.RES  build.bat  common.h  compile.bat  datseg.cpp  datseg.h  fight_lst.cpp  hero.h  items_dat.cpp  monster_dat.cpp  seg001.cpp  seg001.h  seg002.cpp  seg002.h  seg003.cpp  seg003.h  seg004.cpp  seg004.h  seg005.cpp  seg006.cpp  seg006.h  seg007.h  seg008.cpp  seg008.h  seg009.cpp  seg009.h  seg010.asm  seg010.h  seg011.cpp  seg013.asm  seg024.cpp  seg024.h  seg025.cpp  seg025.h  seg026.cpp  seg026.h  seg027.cpp  seg028.cpp  seg028.h  seg029.cpp  (+164 more)
src/schick_dos/tools/: README.md  bnt302de.sh  build.sh  disassemble.sh
src/tools/: .gitignore  Makefile  README.md  dump_obj.cpp  exe_comp.cpp  nc2fc.py  pre-commit
tools/: README.md
tools/any2any/: Makefile
tools/any2any/include/: format.h  version.h
tools/any2any/src/: any2any.c  format.c  loader_ace.c  loader_bob.c  loader_gif.c  loader_nvf.c  loader_raw.c  loader_tga.c  rle.c
tools/gen_extract/: .gen_extract.cpp.swp  Makefile  gen_extract.cpp
tools/genripper/: genripper.c
tools/nltpack/: Makefile  README  dsa1.cpp  dsa1.hpp  dsa2.cpp  dsa2.hpp  dsa3.cpp  dsa3.hpp  fileutils.cpp  fileutils.hpp  nltpack.cpp  nltpack.hpp
tools/nvf2tga/: Makefile
tools/nvf2tga/include/: dump.h  fileformat.h  format.h  loader.h  packer.h  version.h
tools/nvf2tga/src/: ace2tga.c  aif2tga.c  any2any.c  dump_gif.c  dump_tga.c  loader_ace.c  loader_aif.c  loader_bob.c  loader_gif.c  loader_nvf.c  loader_nvf2.c  loader_raw.c  loader_tga.c  loader_uli.c  nvf2gif.c  pp20.c  raw2tga.c
